# librectify

./: CMakeLists.txt  LICENSE.txt  readme.md
src/: CMakeLists.txt  librectify.cpp
